# Sport-suite

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATABASE_REFERENCE.md  Dockerfile.api  Makefile  README.md  SYSTEM_DESIGN.md  TRAINING_READINESS_AUDIT.md  deploy.sh  docker-compose.api.yml  pyproject.toml  requirements.txt
.claude/commands/: diagnose.md  nba-validate.md  release.md  session-start.md  status.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  data_pipeline_issue.md  feature_request.md
.github/workflows/: deploy.yml  lint.yml  security.yml  test.yml
airflow/: README.md  airflow.cfg  airflow.db-journal  docker-compose.airflow.yml
airflow/dags/: __init__.py  callbacks.py  discord_notify.py  nba_daily_card_dag.py  nba_drift_detection.py  nba_evening_pipeline.py  nba_full_pipeline.py  nba_health_check.py  nba_morning_pipeline.py  nba_refresh_pipeline.py  nba_validation_pipeline.py
airflow/plugins/: __init__.py
dbt/: README.md  dbt_project.yml  profiles.yml  profiles.yml.example
dbt/macros/: map_book_name.sql
dbt/models/: schema.yml
discord/: CEPHALON.md  bot.py  nba_commands.py  setup_zariman.py
docker/: .env.example  README.md  complete_migration.py  docker-compose.new.yml  docker-compose.yml  migrate_tables.py
docker/backups/: .gitkeep
docker/cephalon_axiom_db/: 03_atlas_registry.sql  init.sql  schema.sql
docker/nba_games_db/: init.sql  schema.sql
docker/nba_intelligence_db/: init.sql  schema.sql
docker/nba_players_db/: add_injury_table.sql  add_prop_lines_table.sql  add_salary_experience.sql  init.sql  schema.sql
docker/nba_team_db/: init.sql  schema.sql
docker/scripts/: backup.sh  migrate_data.py  migrate_to_consolidated.sh  restore.sh  verify-backup.sh
docker/sportsuite_db/: 01_init.sql  02_schemas.sql  03_players.sql  04_games.sql  05_teams.sql  06_intelligence.sql  07_axiom.sql  08_features.sql
docs/: CASE_STUDY_GOBLIN_LINES.md  DATABASE_AUDIT.md  PREDICTION_SCHEMA.md  SETUP.md  VALIDATION.md
docs/adr/: ADR-001-two-head-stacked-model-architecture.md  ADR-002-multi-database-postgresql-design.md  ADR-003-lightgbm-over-xgboost-catboost.md  ADR-004-disabling-assists-threes-markets.md  ADR-005-isotonic-calibration-for-probability.md  ADR-006-book-disagreement-features.md  README.md
nba/: .gitignore  V4_RETRAINING_PLAN.md  __init__.py  nba-predictions.sh
nba/api/: __init__.py  dependencies.py  main.py  schemas.py
nba/betting_xl/: README.md  __init__.py  analyze_cheatsheet_filters.py  analyze_tv_impact.py  calculate_performance.py  enrich_props_with_matchups.py  format_picks.py  generate_cheatsheet_picks.py  generate_odds_api_picks.py  generate_two_energy_picks.py  generate_xl_predictions.py  line_optimizer.py  monitor.py  populate_actual_values.py  quick_refresh.py  risk_filters.py  run_historical_backtest.py  show_picks.py  track_results.py  validate_actual_picks.py  validate_cheatsheet.py  validate_from_db.py  validate_odds_api_picks.py  validate_predictions.py  validate_xl_models.py  validation_summary_oct23_nov4.md  validation_xl_v3_20260119_to_20260202.md  xl_predictor.py
nba/config/: __init__.py  constants.py  database.py  thresholds.py
nba/core/: __init__.py  axiom_writer.py  bet_sizing.py  cli_drift_check.py  cli_registry.py  clv_tracker.py  conviction_engine.py  daily_card.py  data_quality_checks.py  data_registry.py  drift_detection.py  drift_service.py  edge_calculator.py  exceptions.py  experiment_tracking.py  logging_config.py  model_promoter.py  pipeline_telemetry.py  probability_engine.py  reference_distributions.py  result_tracker.py  schemas.py
nba/features/: README.md  __init__.py  build_merged_dataset.py  build_xl_training_dataset.py  build_xl_training_dataset_batched.py  extract_live_features.py  extract_live_features_xl.py  feature_store.py
nba/models/: MODEL_REGISTRY.toml  __init__.py  context_modifier.py  generate_feature_importance.py  json_calibrator.py  market_classifier_model.py  mlflow_tracking.py  model_registry.py  player_projection_model.py  projection_model.py  promotion_gate.py  train_market.py  walk_forward.py  walk_forward_validation.py
nba/scripts/: README.md  __init__.py  audit_feature_extractors.py  backfill_gamelogs_by_date.py  backfill_plus_minus.py  backfill_prediction_history.py  backfill_props_xl_actuals.py  backfill_season_gamelogs.py  check_current_season_status.py  compute_matchup_history.py  compute_prop_history.py  deduplicate_player_gamelogs.py  fetch_daily_stats.py  load_bettingpros_to_db.py  update_injuries_NOW.py  update_rolling_stats_incremental.py
nba/utils/: __init__.py  name_normalizer.py  season_helpers.py  team_utils.py
notebooks/: 01_feature_importance_analysis.ipynb  02_validation_deep_dive.ipynb  03_live_prediction_example.ipynb  04_v4_training_diagnostic.ipynb  05_feature_extractor_audit.ipynb  06_dataset_comparison.ipynb  07_feature_value_inspection.ipynb  08_v3_vs_v4_dataset_comparison.ipynb  08_v4_merged_dataset_audit.ipynb  README.md  model_retraining_guide.ipynb
scripts/: patch_solace.py
terraform/: .gitignore
terraform/aws/: ec2.tf  iam.tf  main.tf  outputs.tf  s3.tf  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_line_optimizer.py  test_prediction_pipeline.py  test_xl_predictor.py
tests/unit/: test_analytics_modules.py  test_analyze_cheatsheet_filters.py  test_analyze_tv_impact.py  test_axiom_tools.py  test_axiom_writer.py  test_bet_sizing.py  test_bp_analytics_features.py  test_cli_registry.py  test_clv_tracker.py  test_config.py  test_config_init.py  test_context_modifier.py  test_conviction_engine.py  test_daily_card.py  test_data_quality_checks.py  test_data_registry.py  test_database_config.py  test_direct_line_features.py  test_drift_detection.py  test_edge_calculator.py  test_exceptions.py  test_experiment_tracking.py  test_feature_extraction.py  test_feature_extraction_xl.py  test_feature_extractors.py  (+26 more)
(+99 files in other folders)
